fixing background on mobile

--- a/src/styles/_index.sass
+++ b/src/styles/_index.sass
@@ -1,7 +1,7 @@
 html
   max-width: 1920px
   margin: 0 auto
-  scroll-behavior: smooth 
+  scroll-behavior: smooth
   height: 5000px
 
 body
@@ -12,6 +12,12 @@ body
   background-image: url(../assets/yehleen-gaffney-ZUY4OT_lMgs-unsplash.jpg)
   background-repeat: no-repeat
   background-size: contain
-  
-code 
+  @media ( min-width: 769px ) and ( max-width: 1440px )
+    background-size: auto 1200px
+    background-position: 43% 0%
+  @media (max-width: 768px)   
+    background-size: auto 768px
+    background-position: 50% -1%
+
+code
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
